# wfc

./: .gitignore  .gitmodules  .main.cpp.swp  CMakeLists.txt  README.md  arrays.hpp  main.cpp  samples.cfg
include/: configuru.hpp  loguru.hpp
include/wfc/: .configuru.h.swp  algorithm.h  algorithm_data.h  app.h  arrays.h  common.h  configuru.h  image_generator.h  imodel.h  overlapping_model.h  overlapping_pattern_extraction.h  overlapping_types.h  pattern_properties_comparison.h  ranges.h  rgba.h  tile_model.h
libs/: libs.cpp
src/: algorithm.cpp  algorithm_data.cpp  app.cpp  configuru.cpp  loguru.cpp  main.cpp  overlapping_model.cpp  overlapping_pattern_extraction.cpp  pattern_properties_comparison.cpp  tile_model.cpp
test/: CMakeLists.txt
test/src/: extraction_sample_data_test.cpp  overlapping_pattern_extraction_test.cpp
